--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/upload-pages-artifact@v4
         with:
           path: ./build
+          overwrite: true
   # Deployment job
   deploy:
     environment:
