--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "RUN_ID=${{ github.run_id }}"
       - uses: actions/checkout@v4
 
       - name: Setup Node
@@ -46,6 +47,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - run: echo "RUN_ID=${{ github.run_id }}"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
